welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:23: error: ';' expected but ')' found.
for (compteur6 <- 1 to 7) {avance)()}
                                 ^